--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="css/bootstrap.css" rel="stylesheet">
         <title>Northcoders News</title>
     </head>
     <body>
         <div id='root'></div>
         <script src='bundle.js'></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
