--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id='root'></div>
         <script src='bundle.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
